--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,13 @@
 html {
 	scroll-behavior: smooth;
   }
+  h1, h2, h3, h4, h5, h6 {
+	font-family: 'Playfair Display', serif;
+  }
   
+  p, a {
+	font-family: 'Source Sans Pro', sans-serif;
+  }
   a {
 	text-decoration: none;
 	color: white;
@@ -154,4 +160,65 @@ html {
 	
   }
   
-  /*main section start */
+/*main container*/
+.content {
+	background-color: #fff;
+}
+
+/*col 1 */
+.block-title {
+	color: #03030366;
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 16px;
+	padding-bottom: 11px;
+	padding-top: 20px;
+}
+
+article {
+	padding-bottom: 20px;
+}
+
+.wrap {
+	position: relative;
+	min-height: 33px;
+	background-color: #F4F5F6;
+}
+
+img {
+	position: relative;
+	width: 100%;
+	
+}
+.pic-on {
+	display: block;
+	font: bold 17px/16px "Roboto", sans-serif;
+	color: #f72210;
+	padding: 8px 15px 9px;
+	background-color: rgba(255, 255, 255, .9);
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	z-index: 1;
+}
+
+h3 {
+	font-weight: 700;
+	font-size: 22px;
+	color: #000;
+}
+
+.summary {
+	font-size: 15px;
+	font-family: Arial, Helvetica, sans-serif;
+	padding: 0px 0px 10px;
+}
+
+.related {
+	padding: 10px 0px;
+	border-top: 1px solid #d9d9d9;
+	border-bottom: 1px solid #d9d9d9;
+	font-size: 17px;
+	font-weight: 700;
+	color: #000;
+}
