--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ html {
 	font-size: 16px;
 	line-height: 16px;
 	padding-bottom: 11px;
-	padding-top: 20px;
+	padding-top: 10px;
 }
 
 article {
@@ -221,4 +221,468 @@ h3 {
 	font-size: 17px;
 	font-weight: 700;
 	color: #000;
+}
+*Col 2*/
+
+#more-stories-part {
+	padding-top: 14px;
+	padding-bottom: 10px;
+	border-top: 1px solid #ddd;
+}
+
+#image {
+	float: left;
+	width: 135px;
+	margin-right: 15px;
+	clear: right;
+}
+
+h6 {
+	color: #000;
+	font-weight: 700;
+}
+
+/*Col 3*/
+
+.opinion {
+	border-bottom: 1px solid #ddd;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.headshot {
+	height: 63px;
+	max-width: 63px;
+}
+
+.info {
+	color: #000;
+	font-size: 16px;
+	font-weight: 700;
+	margin-bottom: 5px;
+	margin-left: -10px;
+}
+
+.byline {
+	color: #555555;
+	padding: 0px;
+	margin: 0px;
+}
+
+#last-opinion {
+	border: none;
+}
+
+.article-info {
+	padding: 20px 0px;
+}
+
+#sponsored {
+	border: 1px solid #e6e6e6;
+	padding: 20px;
+}
+
+.block {
+	position: relative;
+	width: 300px;
+	height: 163px;
+	border: 1px solid #e5e5e5;
+	background-color: #f4f5f6;
+	padding: 20px;
+	margin: 0px auto 20px;
+}
+
+#add {
+	margin-bottom: 10px;
+}
+
+.update {
+	margin-top: 20px;
+	color: #333;
+	font: bold 15px/15px "Roboto", sans-serif;
+}
+
+.icon-n {
+	position: relative;
+	display: block;
+	max-width: 29px;
+	height: 28px;
+	background: url(https://s.newsweek.com/sites/www.newsweek.com/themes/newsweek/images/logo-n1.svg) center/contain
+		no-repeat #f72210;
+	margin-right: 10px;
+}
+
+#block-text {
+	font-size: 18px;
+	font-weight: bold;
+	text-transform: uppercase;
+}
+
+.signup {
+	text-decoration: none;
+	color: #fff;
+	width: 101px;
+	padding: 10px 5px 10px 12px;
+
+	font: bold 18px/18px "Roboto", sans-serif;
+	margin-top: 0px;
+	background-color: #666;
+}
+
+.sponsored-article {
+	max-width: 330px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+/*Bottom*/
+
+.bottom {
+	margin-top: 30px;
+}
+
+.gray {
+	background-color: #f4f5f6;
+	color: #000;
+	text-align: center;
+	margin-bottom: 0;
+	padding: 10px 10px 10px 12px;
+	font: bold 18px/18px "Roboto", sans-serif;
+}
+
+.gray::after {
+	content: "";
+	display: inline-block;
+	width: 8px;
+	height: 14px;
+	margin-left: 10px;
+	background: url(https://s.newsweek.com/sites/www.newsweek.com/themes/newsweek/images/icon-arrow-right-black.svg)
+		center/contain no-repeat;
+}
+
+.part-title {
+	font-size: 19px;
+	font-weight: bold;
+	margin-bottom: 15px;
+	text-transform: uppercase;
+	padding-top: 5px;
+}
+
+.title-border {
+	border-bottom: 1px solid #d9d9d9;
+	margin: 20px auto;
+}
+
+.image-article {
+	position: relative;
+	background-color: #000;
+	background-position: center;
+	background-size: cover;
+	height: 15vw;
+	overflow: hidden;
+}
+
+#image-article1 {
+	background-image: url(images/feschiff01banner.jpg);
+}
+
+#image-article2 {
+	background-image: url(images/feomar011130744964.jpg);
+}
+
+#image-article3 {
+	background-image: url(images/affirmative-action-college-admissions-scandal-statistics.jpg);
+}
+
+#image-article4 {
+	background-image: url(images/fewhiteidentity01619475022.jpg);
+}
+
+#image-article5 {
+	background-image: url(images/doug-jones.jpg);
+}
+
+#image-article6 {
+	background-image: url(images/feblockchain-impact-awardssimply-vital-health1062184620.jpg);
+}
+
+#image-article7 {
+	background-image: url(images/infocus041135495345.jpg);
+	height: 17vw;
+}
+
+.category {
+	font: bold 16px/26px "Roboto", sans-serif;
+	color: #f72210;
+	text-transform: uppercase;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.magazine-article .category span:first-of-type {
+	padding: 3px 7px;
+	background-color: #f72210;
+	color: #fff;
+	margin-right: 7px;
+}
+
+.cat > a {
+	color: #f72210;
+}
+
+.article-title {
+	font-size: 20px;
+	color: #000;
+	font-weight: 700;
+}
+
+#marathon {
+	position: absolute;
+	bottom: 0;
+	padding: 3px 7px;
+	background-color: #f72210;
+	color: #fff;
+	font-size: 17px;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
+#shadowN::after {
+	border-bottom: 3px solid red;
+	border-right: 3px solid red;
+	display: block;
+	content: "";
+	width: 26px;
+	height: 25px;
+	position: absolute;
+	bottom: -4px;
+	right: -4px;
+}
+
+.count {
+	width: 70px;
+	height: 52px;
+	display: block;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 58px;
+	text-indent: 5px;
+	text-align: center;
+	background: url(images/icon-slideshows-nw.png) 0 0/contain no-repeat;
+	color: #e9212e;
+}
+
+.part-picks {
+	border-top: 1px solid #d9d9d9;
+	color: #f72210;
+	padding-top: 25px;
+	font-size: 22px;
+	line-height: 22px;
+}
+
+.feature2 {
+	padding: 10px 0px;
+	border-top: 1px solid #d9d9d9;
+}
+
+.top-column {
+	border: none;
+	padding: 0px 0px 10px;
+}
+
+.red {
+	color: #f72210;
+	margin-top: 20px;
+}
+
+.sunscribe {
+	margin-bottom: 20px;
+}
+
+.items {
+	background-color: #f4f5f6;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 5px;
+	margin-bottom: 30px;
+}
+
+.item1,
+.item2 {
+	padding: 20px 0px 40px;
+}
+
+.item2 {
+	border-top: 1px solid #d2d2d2;
+	padding-bottom: 100px;
+}
+
+.itemsimg {
+	width: 120px;
+	float: left;
+	margin-right: 20px;
+}
+
+.itemsspan::before {
+	content: '✓';
+	color: #999;
+	font-size: 26px;
+	vertical-align: top;
+	text-align: center;
+}
+
+.itemsspan {
+	font-size: 15px;
+	margin-top: 5px;
+}
+
+#signin2 {
+	margin: 20px auto;
+	font-size: 18px;
+	font-weight: 600;
+	width: 100%;
+	text-align: center;
+}
+
+#signin2 a {
+	text-decoration: none;
+	background-color: #f72210;
+	color: #fff;
+	padding: 8px;
+}
+
+.mostread {
+	color: #000;
+}
+
+footer {
+	border-top: 2px solid #f4f5f6;
+	background-color: #fff;
+	padding-top: 30px;
+}
+
+.footer-top {
+	padding-bottom: 20px;
+}
+
+.logo-footer > img {
+	width: 236px;
+	height: 36px;
+	fill: #f72210;
+}
+
+.copyright {
+	vertical-align: bottom;
+	padding-left: 10px;
+}
+
+.media-icons {
+	text-align: right;
+}
+
+.media-icons > i {
+	vertical-align: bottom;
+	font-size: 25px;
+	color: #666;
+	padding-left: 7px;
+}
+
+.menu {
+	display: flex;
+	font-size: 14px;
+	line-height: 15px;
+	list-style: none;
+	margin: 0px;
+	color: #666;
+	padding: 0px;
+}
+
+.leaf {
+	border-right: 1px solid #d9d9d9;
+	padding-right: 10px;
+	margin-right: 10px;
+	margin-bottom: 10px;
+	cursor: pointer;
+}
+
+.leaf:hover {
+	color: #000;
+}
+
+#right {
+	text-align: right;
+	padding: 0px;
+}
+
+.last {
+	border: none;
+}
+
+@media screen and (max-width: 991px) {
+	.logoimg {
+		width: 132px;
+		height: 20px;
+		left: 100px;
+		top: 10px;
+	}
+
+	.fa-bars {
+		color: #fff;
+	}
+
+	#navscroll {
+		padding: 3px 0px;
+	}
+
+	#datenav {
+		display: none;
+	}
+
+	#signin {
+		font-size: 14px;
+		bottom: 0px;
+	}
+
+	#signin a {
+		padding: 6px;
+	}
+
+	.fa-chevron-right {
+		display: none !important;
+	}
+
+	/*nav bottom*/
+	.header-bottom {
+		display: none;
+	}
+
+	/*main*/
+	#right-col {
+		margin: auto;
+	}
+
+	.content {
+		padding-top: 40px;
+	}
+}
+
+@media (max-width: 767px) {
+	#image {
+		width: 258px;
+	}
+
+	.image-article {
+		height: 52vw;
+	}
+
+	#image-article7 {
+		height: 52vw;
+	}
+
+	.media-icons {
+		text-align: left;
+	}
 }
