--- a/css/style.css
+++ b/css/style.css
@@ -1,167 +1,166 @@
+body {
+	background-color: #f4f5f6;
+	color: #333;
+	font-size: 13px;
+	line-height: 18px;
+	font-family: 'Roboto', sans-serif;
+	overflow-x: hidden;
+}
 
-html {
-	scroll-behavior: smooth;
-  }
-  h1, h2, h3, h4, h5, h6 {
-	font-family: 'Playfair Display', serif;
-  }
-  
-  p, a {
-	font-family: 'Source Sans Pro', sans-serif;
-  }
-  a {
-	text-decoration: none;
-	color: white;
-	border-radius: .25rem;
-	text-align: center;
-	display: inline-block;
-	transition: all .3s;
-  }
-  
-  a:hover {
-	opacity: .6;
-	
-  }
-  
-  .clearfix::before, .clearfix::after, .container::before, .container::after, .container-fluid::before, .container-fluid::after, .row::before, .row::after {
-	content: " ";
-	display: table;
-  }
- .container-fluid, .container {
+.content {
 	max-width: 1310px;
-  }
-  /* Main header content */
-  
-  .page-header {
-	z-index: 10;
-	display: block;
+	margin: auto;
+	background-color: #fff;
+	padding: 30px;
+}
+
+/*navigation*/
+/*navigation top*/
+
+.container-fluid {
 	position: relative;
-  }
-  .container {
+}
+
+#navscroll {
 	position: relative;
+	margin: auto;
 	background-color: #f72210;
-	padding: 0 !important;
-	max-width: 1310px !important;
-  }
-  .header-top {
-	height: 5rem;
-	padding: 20px 10px 15px;
-	position: relative;
-	z-index: 2;
-	-webkit-align-items: flex-end;
-	align-items: flex-end;
-  }
-  .flex-xs-6 {
-	width: 50%;
-	height: 36px;
-  }
-  .flex-xs {
-	display: -webkit-flex;
-	display: flex;
-	-webkit-justify-content: space-between;
-	justify-content: space-between;
-  }
-  .right-menu {
-	-webkit-justify-content: flex-end;
-	justify-content: flex-end;
-  }
-  .header-date, .sign-in-btn {
 	color: #fff;
-  }
-  .subs-btn {
-	background-color: #fff;
-	color: #f72210;
-  }
-  .subs-btn:hover {
-	background-color: #fff;
-	color: #f72210;
-  }
-  .sign-in-btn, .subs-btn {
+	padding: 50px 0px 10px 0px;
+	max-width: 1310px;
+	transition: all 0.1s;
+}
+
+#navbottom {
 	position: relative;
-	font: bold 14px/14px "Roboto Condensed", sans-serif;
-	font-size: 16px;
-	text-transform: uppercase;
-	display: inline-block;
-	padding: 10px 12px;
-	float: right;
-  }
-  .sign-in-btn:hover {
-	color: #fff;
-  }
-  .header-middle {
-	-moz-transform: translate(-50%, 0);
-	-ms-transform: translate(-50%, 0);
-	-webkit-transform: translate(-50%, 0);
-	transform: translate(-50%, 0);
+	top: 95px;
+	max-width: 1310px;
+	margin: auto;
+}
+
+.logoimg {
 	position: absolute;
-	z-index: 3;
-	top: 0;
+	width: 396px;
+	height: 60px;
+	transform: translate(-50%, 0);
+	top: 15px;
 	left: 50%;
-	padding: 10px 15px;
-	cursor: pointer;
-  }
-  .navbar {
-	background-color: #fff !important;
-	border-bottom: 2px solid #f4f5f6;
-	padding-top: 10px !important;
-	padding-bottom: 10px !important;
-  }
-  .navbar::before {
+}
+
+.logoimg > img {
+	width: 100%;
+}
+
+.datenav {
+	position: relative;
+	margin-left: 20px;
+	font-size: 16px;
+}
+
+#signin {
+	margin-right: 20px;
+	font-size: 18px;
+	font-weight: 600;
+	position: relative;
+	bottom: 10px;
+}
+
+#signin a {
+	text-decoration: none;
+	color: #f72210;
+	background-color: #fff;
+	padding: 8px;
+}
+
+.fa-chevron-right {
+	padding-right: 10px;
+	padding-left: 10px;
+	z-index: 9999;
+}
+
+#signin span {
+	padding-right: 10px;
+}
+
+.fa-bars {
+	position: absolute;
+	top: 0;
+	right: -10px;
+	width: 16px;
+	padding: 10px;
+	color: #f72210;
+	z-index: 9999;
+}
+
+/*navigation bottom*/
+
+.header-bottom {
+	color: #000;
+	height: 50px;
+	padding: 10px 0px;
+	background-color: #fff;
+	border-bottom: 1px solid #d9d9d9;
+	position: relative;
+}
+
+.header-bottom::before {
+	width: 66px;
 	position: absolute;
 	top: 0;
 	right: 0;
 	content: "";
 	display: block;
-	width: 66px;
 	background-color: #f72210;
 	border-left: 12px solid #fff;
 	border-top: 13px solid #f72210;
-  }
-  .navbar-nav {
-	font-size: 19px;
+}
+
+.page-nav {
+	display: flex;
+	font-size: 21px;
 	line-height: 24px;
 	font-weight: 700;
-	font-family: "Roboto Condensed", sans-serif;
-	display: -webkit-flex;
-	display: flex;
-	-webkit-justify-content: center;
-	justify-content: center;
-	width: 100%;
-  }
-  ul.navbar-nav li {
-	border-left: 1px solid #d9d9d9 !important;
-	padding: 0;
-	-webkit-flex-grow: 1;
+	list-style: none;
+	margin: 0px;
+	padding: 0px 54px 0px 0px;
+}
+
+.page-nav li {
 	flex-grow: 1;
 	text-align: center;
-  }
-  ul.navbar-nav li:first-child {
-	border-left-width: 0 !important;
-  }
-  .nav-link {
-	color: #000 !important;
-  }
-  .nav-link:hover {
-	color: #f72210 !important;
-  }
-  .navbar-text {
-	display: none !important;
-  }
-.trending{
-	font-size: 1.2rem;
-	font-weight:bold;
-	position: relative;
-	left:20rem;
-	
+    border-left: 1px solid #d9d9d9;
+    font-family: Arial, Helvetica, sans-serif;
 }
-  .head-trending{
-	border-bottom: 1px solid gainsboro;
-	background-color: white;
-	
-  }
-  
+
+.page-nav > li > a {
+	cursor: pointer;
+}
+
+.page-nav > li > a:hover {
+	color: #f72210 !important;
+}
+
+.page-nav :first-child,
+.page-nav :last-child {
+	border-width: 0px;
+}
+
+#search {
+	color: #0000008c;
+	cursor: text;
+	font-size: 16px;
+	font-weight: 400;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.fa-search {
+	padding-left: 10px;
+	font-weight: 400;
+}
+
 /*main container*/
 .content {
+	padding-top: 100px;
 	background-color: #fff;
 }
 
@@ -172,7 +171,7 @@ html {
 	font-size: 16px;
 	line-height: 16px;
 	padding-bottom: 11px;
-	padding-top: 10px;
+	padding-top: 20px;
 }
 
 article {
@@ -182,14 +181,13 @@ article {
 .wrap {
 	position: relative;
 	min-height: 33px;
-	background-color: #F4F5F6;
 }
 
 img {
 	position: relative;
 	width: 100%;
-	
 }
+
 .pic-on {
 	display: block;
 	font: bold 17px/16px "Roboto", sans-serif;
@@ -222,7 +220,8 @@ h3 {
 	font-weight: 700;
 	color: #000;
 }
-*Col 2*/
+
+/*Col 2*/
 
 #more-stories-part {
 	padding-top: 14px;
