--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
 	width: 100%;
 }
 
-.datenav {
+#nav-date {
 	position: relative;
 	margin-left: 20px;
 	font-size: 16px;
@@ -223,13 +223,13 @@ h3 {
 
 /*Col 2*/
 
-#more-stories-part {
+.more-stories-part {
 	padding-top: 14px;
 	padding-bottom: 10px;
 	border-top: 1px solid #ddd;
 }
 
-#image {
+.image {
 	float: left;
 	width: 135px;
 	margin-right: 15px;
@@ -276,7 +276,7 @@ h6 {
 	padding: 20px 0px;
 }
 
-#sponsored {
+.sponsored {
 	border: 1px solid #e6e6e6;
 	padding: 20px;
 }
@@ -382,31 +382,31 @@ h6 {
 }
 
 #image-article1 {
-	background-image: url(images/feschiff01banner.jpg);
+	background-image: url(../images/fe-charlottesville-01-830762758-use-banner.jpg);
 }
 
 #image-article2 {
-	background-image: url(images/feomar011130744964.jpg);
+	background-image: url(../images/fe-charlottesville-sidebar-qa-184306268.jpg);
 }
 
 #image-article3 {
-	background-image: url(images/affirmative-action-college-admissions-scandal-statistics.jpg);
+	background-image: url(../images/fe-east-jerusalem-01-457600016.jpg);
 }
 
 #image-article4 {
-	background-image: url(images/fewhiteidentity01619475022.jpg);
+	background-image: url(../images/per-money-01-163332732.jpg);
 }
 
 #image-article5 {
-	background-image: url(images/doug-jones.jpg);
+	background-image: url(../images/hor-moonshot-apeel-sciences-01-1059213238.jpg);
 }
 
 #image-article6 {
-	background-image: url(images/feblockchain-impact-awardssimply-vital-health1062184620.jpg);
+	background-image: url(../images/partingshot-rupaul.jpg);
 }
 
 #image-article7 {
-	background-image: url(images/infocus041135495345.jpg);
+	background-image: url(../images/rain-party.png);
 	height: 17vw;
 }
 
@@ -538,7 +538,7 @@ h6 {
 	margin-top: 5px;
 }
 
-#signin2 {
+.signin2 {
 	margin: 20px auto;
 	font-size: 18px;
 	font-weight: 600;
@@ -546,7 +546,7 @@ h6 {
 	text-align: center;
 }
 
-#signin2 a {
+.signin2 a {
 	text-decoration: none;
 	background-color: #f72210;
 	color: #fff;
